[package]
name = "pi"
version = "0.2.5"
authors = ["Robin Schulz <robinschulz3000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "*"
sdl2 = "*"
gl = "*"
imgui = "*"
imgui-sdl2 = "*"
imgui-opengl-renderer = "*"
tokio = { version = "1", features = ["full"] }
num-format = "*"
pretty-bytes = "*"
humantime = "*"
log = "*"